istio/uat-beta/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-beta
  namespace: ns-beta
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/sample-gateway
  http:
  - match:
    - uri:
        prefix: /beta
    route:
    - destination:
        host: sample-app.ns-beta.svc.cluster.local
        port:
          number: 80
